--- a/appmanifest.json
+++ b/appmanifest.json
@@ -1,6 +1,6 @@
 ﻿{
-	"name": "There Is No Fangame",
-	"short_name": "There Is No Fangame",
+	"name": "There Is No Fangame 1.4",
+	"short_name": "There Is No Fangame 1.4",
 	"start_url": "index.html",
 	"display": "fullscreen",
 	"orientation": "landscape",
